--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-fontawesome": "^1.6.4",
     "antd": "^4.8.0",
+    "antd-mobile": "^2.3.4",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
