--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@types/react-fontawesome": "^1.6.4",
+    "@types/react-router-config": "^5.0.1",
+    "@types/react-router-dom": "^5.1.6",
     "antd": "^4.8.0",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.0",
@@ -26,9 +28,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
+    "react-router-config": "^5.1.1",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.5",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "weixin-js-sdk": "^1.6.0"
   },
   "scripts": {
     "start": "set port=5210 && react-scripts start",
