--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@types/react-fontawesome": "^1.6.4",
+    "@types/react-redux": "^7.1.11",
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.6",
     "antd": "^4.8.0",
@@ -28,8 +29,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
+    "react-redux": "^7.2.2",
     "react-router-config": "^5.1.1",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.5",
     "web-vitals": "^0.2.4",
     "weixin-js-sdk": "^1.6.0"
