--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 
 REACT_APP_ENV = dev
 
-REACT_APP_BASE_URL =  http://192.168.199.159/api/phone/
+#REACT_APP_BASE_URL =  http://192.168.199.159/api/phone/
+ REACT_APP_BASE_URL =  http://116.62.54.36/api/phone/
+
 
 REACT_APP_FILE_URL = http://192.168.199.159:6024/
