--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.11",
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-sticky": "^6.0.3",
     "antd": "^4.8.0",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.0",
@@ -32,6 +33,7 @@
     "react-redux": "^7.2.2",
     "react-router-config": "^5.1.1",
     "react-scripts": "4.0.0",
+    "react-sticky": "^6.0.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.5",
